@@ -1,3 +1,7 @@
+2014-03-26  Richard Frith-Macdonald <rfm@gnu.org>
+
+	EcControl.m: Add option to allow any user to log in.
+
 2014-03-25  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* EcConsole.m: Don't read from stdin whn in non-interactive mode
